# Verse

./: CMakeLists.txt  LICENSE.txt  README  README.md  libVERSE_API.dox.in
cmake/: macros.cmake
doc/: README  customdoxygen.css  footer.html  header.html
modules/: CMakeLists.txt  CMakeLists.txt~  README
modules/AR/: CMakeLists.txt  CMakeLists.txt~  FacialRecognition.cpp  FacialRecognition.h  MarkerDetection.cpp  MarkerDetection.h  QR.cpp  QR.cpp~  QR.h  QR.h~
modules/Core/: CMakeLists.txt  Callback.h  Callback.h~  DisplayObject.cpp  DisplayObject.cpp~  DisplayObject.h  EventDispatcher.cpp  EventDispatcher.h  EventHandler.cpp  EventHandler.h  EventHandler.h~  Object.cpp  Object.cpp~  Object.h
modules/Devices/: CMakeLists.txt  Camera.h  Device.cpp  Device.h  OrientationSensor.h  Platform.cpp  Platform.h  SerialDevice.h
modules/Events/: CMakeLists.txt  CameraEvent.cpp  CameraEvent.h  Event.cpp  Event.h  GestureEvent.cpp  GestureEvent.h  KeyboardEvent.cpp  KeyboardEvent.h  MenuEvent.cpp  MenuEvent.h  MouseEvent.cpp  MouseEvent.h  QREvent.cpp  QREvent.h  VoiceEvent.cpp  VoiceEvent.h
modules/UI/: Button.cpp  Button.cpp~  Button.h  Button.h~  CMakeLists.txt  Dialog.cpp  Dialog.h  DialogBalloon.cpp  DialogBalloon.h  Draw2D.cpp  Draw2D.h  FreeType.cpp  FreeType.h  GLBaseApp.cpp  GLBaseApp.h  Image2D.cpp  Image2D.h  Menu.cpp  Menu.h  MenuItem.cpp  MenuItem.h  MenuItemData.cpp  MenuItemData.h  Model3D.cpp  Model3D.h  TextField.cpp  TextField.h
modules/Utils/: CMakeLists.txt  Object3dLoader.cpp  Object3dLoader.h  UrlLoader.cpp  UrlLoader.h  XML.cpp  XML.h
resources/: README
samples/: CMakeLists.txt  CMakeLists.txt~  README  appDemo.cpp  appDemo.cpp~  eventDemo.cpp  menu.xml  menuDemo.cpp
samples/Card_3DModel/: card3dmodel.cpp  logo.blend  menu1.xml
samples/Menu_and_QR/: menuDemo.cpp
samples/SOAP_QR/: .CMakeLists.txt.swp  .DialogBalloonImages.h.swp  CMakeLists.txt  DialogBalloonImages.cpp  DialogBalloonImages.h  Products.h  ProductsControllerBinding.getImagesData.req.xml  ProductsControllerBinding.getImagesData.res.xml  ProductsControllerBinding.getProduct.req.xml  ProductsControllerBinding.getProduct.res.xml  ProductsControllerBinding.nsmap  menu.xml  soapC.cpp  soapDemo.cpp  soapH.h  soapProductsControllerBindingProxy.cpp  soapProductsControllerBindingProxy.h  soapProductsControllerBindingService.cpp  soapProductsControllerBindingService.h  soapStub.h
